--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.17.3",
+    "knex": "^0.95.15",
+    "knex-cleaner": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "sqlite3": "^5.0.2",
     "web-vitals": "^2.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex rollback",
+    "server": "nodemon index.js"
   },
   "eslintConfig": {
     "extends": [
