--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "express": "^4.17.3",
     "knex": "^0.95.15",
     "knex-cleaner": "^1.3.1",
